# ai_game_engine

./: .clang-format  .gitignore  BUILD.md  BUILD_CHECK_REPORT.md  Build.bat  Build.sh  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles.sh  PHASE1_SUMMARY.md  PROJECT_LOG.md  README.md  Setup.bat  Setup.sh  TASKS_QUEUE.md  WORKFLOW.md
.github/scripts/: analyze_failure.py  auto_fix.py
.github/workflows/: auto-fix.yml  build.yml  create-issue-on-failure.yml  windows-precheck.yml
Docs/: CI_AUTOMATION.md  CONTRIBUTING.md  TASK_BOARD.md
Docs/Architecture/: rhi-design.md
Docs/Templates/: Research_Template.md  Task_Design_Template.md
Samples/Triangle/: README.md  TriangleApp.cpp  TriangleApp.h  main.cpp  shaders.hlsl  triangle-webgl.html
Source/Runtime/Core/Private/: Core.cpp  Log.cpp  Math.cpp  Memory.cpp
Source/Runtime/Core/Public/: Core.h  Log.h  MSVCCompat.h  Math.h  Memory.h
Source/Runtime/Core/Public/Core/: Platform.h
Source/Runtime/RHI/D3D12/Private/: D3D12Buffer.cpp  D3D12CommandList.cpp  D3D12DescriptorAllocator.cpp  D3D12Device.cpp  D3D12FrameResourceManager.cpp  D3D12PipelineState.cpp  D3D12RootSignature.cpp  D3D12SwapChain.cpp  D3D12Texture.cpp  D3D12UploadManager.cpp
Source/Runtime/RHI/D3D12/Public/: D3D12Buffer.h  D3D12CommandList.h  D3D12DescriptorAllocator.h  D3D12Device.h  D3D12FrameResourceManager.h  D3D12PipelineState.h  D3D12RootSignature.h  D3D12SwapChain.h  D3D12Texture.h  D3D12UploadManager.h
Source/Runtime/RHI/Private/: CommandList.cpp  DescriptorAllocator.cpp  Device.cpp  FrameResourceManager.cpp  RHI.cpp  Resource.cpp  SwapChain.cpp  UploadManager.cpp
Source/Runtime/RHI/Public/: IBuffer.h  ICommandList.h  IDescriptorAllocator.h  IDevice.h  IFence.h  IFrameResourceManager.h  IPipelineState.h  IResource.h  IRootSignature.h  IShader.h  ISwapChain.h  ITexture.h  IUploadManager.h  RHI.h  RHICore.h
Source/Runtime/Window/Private/: Window.cpp  WindowManager.cpp
Source/Runtime/Window/Public/: Window.h  WindowManager.h
Tasks/: phase1-task-001.md  phase1-task-002.md  phase1-task-003.md  phase1-task-004.md  phase1-task-005.md  phase1-task-006.md  phase1-task-007.md  phase1-task-010.md
Tests/: D3D12BufferTest.cpp  D3D12CommandListTest.cpp  D3D12DeviceTest.cpp  D3D12FrameResourceManagerTest.cpp  D3D12SwapChainTest.cpp  D3D12TextureTest.cpp  D3D12UploadManagerTest.cpp
build_mingw/: CTestTestfile.cmake
cmake/: mingw-toolchain.cmake
docs/engine-dev-assistant/: AGENT.md  FEISHU_INTEGRATION.md  README.md  SKILLS.md  WORKFLOWS.md
